# ReefConnect

./: .gitignore  README.md  README_Process1.md  analyze_connectivity_matrices.py  check_output_summary.py  compare_csv_vs_netcdf.py  compare_old_vs_new_output.py  ecological_processes.py  get_kernels.ipynb  io_utils.py  main_connectivity_calculation.py  plot_connectivity_results.py  print_connectivity_summary.py  process1_connectivity.py  pyproject.toml  run_connectivity.sh  run_connectivity_parallel.py  run_connectivity_with_config.py  run_test_with_example_files.py  setup.py  spatial_metrics.py  test_final.py  test_process1.py  test_real_data_reorganized.py  test_reorganization_complete.py  test_simple.py  test_spatial_only.py  test_spatial_optimization.py  test_step1.py  test_step2_3.py  test_with_real_data.py
config/: connectivity_parameters.yaml
docs/: README.md  connectivity_comparison_analysis.md  connectivity_comparison_todo.md
jobs/: Full_parallel_run.sh  parallel_production_job.sh  run_test_parallel.sh  test_parallel_job.sh
logs/: full_connectivity_12339189_0.out  full_connectivity_12339189_1.out  full_connectivity_12339189_10.out  full_connectivity_12339189_100.out  full_connectivity_12339189_101.out  full_connectivity_12339189_102.out  full_connectivity_12339189_103.out  full_connectivity_12339189_104.out  full_connectivity_12339189_105.out  full_connectivity_12339189_106.out  full_connectivity_12339189_107.out  full_connectivity_12339189_108.out  full_connectivity_12339189_109.out  full_connectivity_12339189_11.out  full_connectivity_12339189_110.out  (+233 more)
(+34 files in other folders)
